--- a/UDVogue/UDVogueApp/templates/base.html
+++ b/UDVogue/UDVogueApp/templates/base.html
@@ -49,14 +49,14 @@
                         <a class="nav-link" href="shop.html">Tienda</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="design.html">Revistas</a>
+                        <a class="nav-link" href="#revistas">Revistas</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">Conócenos</a>
+                        <a class="nav-link" href="#about">Conócenos</a>
                      </li>
-                     <!--<li class="nav-item">
-                        <a class="nav-link" href="contact.html">¡Contáctanos!</a>
-                     </li>-->
+                     <li class="nav-item">
+                        <a class="nav-link" href="#contact">¡Contáctanos!</a>
+                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                      <div class="search_icon">
@@ -122,7 +122,7 @@
 
 
       <!-- about section start -->
-      <div class="about_section layout_padding">
+      <div id="about" class="about_section layout_padding">
          <div class="container">
             <div class="about_section_2">
                <div class="row">
@@ -143,17 +143,17 @@
 
       
       <!--  design section start -->
-      <div class="design_section layout_padding">
+      <div id="revistas" class="design_section layout_padding">
          <div id="my_slider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-               {% for revista in revistas|slice:":3" %}
-               <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}">
-                  <div class="container">
+               {% for grupo in grupoRevistas %}
+               <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                  <div class="container" id="Revistas">
                      <h1 class="design_taital">Nuestras revistas</h1>
                      <p class="design_text">¡Descubre el producto perfecto en nuestra amplia colección de revistas, donde siempre encontrarás algo único para ti!</p>
                      <div class="design_section_2">
                         <div class="row">
-                           {% for revista in revistas %}
+                           {% for revista in grupo %}
                            <div class="col-md-4">
                               <div class="box_main">
                                  <p class="chair_text">{{ revista.titulo }}</p>
@@ -163,10 +163,6 @@
                                  <div class="buy_bt"><a href="#">Explorar</a></div>
                               </div>
                            </div>
-                           {% if forloop.counter|divisibleby:3 %}
-                        </div>
-                        <div class="row">
-                           {% endif %}
                            {% endfor %}
                         </div>
                      </div>
@@ -174,8 +170,6 @@
                </div>
                {% endfor %}
             </div>
-
-            <!-- Botones de navegación -->
             <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
                <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
             </a>
@@ -183,9 +177,9 @@
                <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
             </a>
          </div>
+         <div class="extraContainer"></div>
       </div>
       <!--  design section end -->
-
 
 
       <!--  newsletter section start -->
@@ -207,7 +201,7 @@
 
 
       <!-- contact section start -->
-      <div class="contact_section layout_padding">
+      <div id="contact" class="contact_section layout_padding">
          <div class="container">
             <div class="contact_section_2">
                <div class="row">
@@ -301,5 +295,17 @@
       <!-- javascript --> 
       <script src="{% static 'js/owl.carousel.js' %}"></script>
       <script src="{% static 'js/uery.fancybox.min.js' %}"></script>
+
+      <script>
+         document.querySelectorAll('a.nav-link').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+               e.preventDefault();
+               const target = document.querySelector(this.getAttribute('href'));
+               if (target) {
+                  target.scrollIntoView({ behavior: 'smooth' });
+               }
+            });
+         });
+      </script>
    </body>
 </html>
