--- a/UDVogue/UDVogueApp/static/css/style.css
+++ b/UDVogue/UDVogueApp/static/css/style.css
@@ -736,11 +736,10 @@ input.email_text::placeholder {
 
 
 /* footer section start */
-
 .footer_section {
     width: 100%;
     float: left;
-    background-color: #100703;
+    background-color: black;
     height: auto;
     padding: 90px 0px;
 }
@@ -759,16 +758,16 @@ input.email_text::placeholder {
 .footer_location_text li {
     float: left;
     font-size: 16px;
-    color: #ffffff;
+    color: white;
     padding: 50px 80px;
 }
 
 .footer_location_text li a {
-    color: #ffffff;
+    color: white;
 }
 
 .footer_location_text li a:hover {
-    color: #7c2c0c;
+    color: #4f4e4e;
 }
 
 .padding_left_10 {
@@ -790,7 +789,7 @@ input.email_text::placeholder {
     padding: 0px;
     text-decoration: none;
     text-align: center;
-    color: #fff;
+    color: white;
     font-size: 25px;
     font-weight: normal;
     line-height: 2em;
@@ -801,9 +800,8 @@ input.email_text::placeholder {
 
 
 /* facebook button class*/
-
 .facebookBtn {
-    background: #171717;
+    background: black;
 }
 
 .facebookBtn:before {
@@ -814,19 +812,14 @@ input.email_text::placeholder {
 }
 
 .facebookBtn:hover {
-    color: #fff;
-    background: #7c2c0c;
-}
-
-a.facebookBtn.smGlobalBtn.active {
-    background: #7c2c0c;
+    color: white;
+    background: #4f4e4e;
 }
 
 
 /* twitter button class*/
-
 .twitterBtn {
-    background: #171717;
+    background: black;
 }
 
 .twitterBtn:before {
@@ -836,15 +829,14 @@ a.facebookBtn.smGlobalBtn.active {
 }
 
 .twitterBtn:hover {
-    color: #fff;
-    background: #7c2c0c;
+    color: white;
+    background: #4f4e4e;
 }
 
 
 /* google plus button class*/
-
 .googleplusBtn {
-    background: #171717;
+    background: black;
 }
 
 .googleplusBtn:before {
@@ -854,15 +846,14 @@ a.facebookBtn.smGlobalBtn.active {
 }
 
 .googleplusBtn:hover {
-    color: #fff;
-    background: #7c2c0c;
+    color: white;
+    background: #4f4e4e;
 }
 
 
 /* linkedin button class*/
-
 .linkedinBtn {
-    background: #171717;
+    background: black;
 }
 
 .linkedinBtn:before {
@@ -872,14 +863,14 @@ a.facebookBtn.smGlobalBtn.active {
 }
 
 .linkedinBtn:hover {
-    color: #fff;
-    background: #7c2c0c;
+    color: white;
+    background: #4f4e4e;
 }
 
 .useful_text {
     width: 100%;
     font-size: 24px;
-    color: #fcfcfc;
+    color: white;
     margin-bottom: 15px;
     font-weight: bold;
     text-transform: uppercase;
@@ -898,7 +889,7 @@ a.facebookBtn.smGlobalBtn.active {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #878585;
+    color: #4f4e4e;
     margin: 0px;
     padding-top: 10px;
 }
@@ -924,19 +915,16 @@ a.facebookBtn.smGlobalBtn.active {
 }
 
 .footer_menu li a:hover {
-    color: #7c2c0c;
+    color: #4f4e4e;
 }
-
-
 /* footer section end */
 
 
 /* copright section start */
-
 .copyright_section {
     width: 100%;
     float: left;
-    background-color: #ffffff;
+    background-color: white;
     height: auto;
 }
 
@@ -944,20 +932,17 @@ a.facebookBtn.smGlobalBtn.active {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #0b0b0c;
+    color: black;
     text-align: center;
     margin-left: 0px;
     font-weight: 500;
 }
 
 .copyright_text a {
-    color: #0b0b0c;
+    color: black;
 }
 
 .copyright_text a:hover {
-    color: #7c2c0c;
+    color: #4f4e4e;
 }
-
-
 /* copyright section end */
-
